--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
                     <h3>Ar-Condicionado</h3>
                     <p>Instalação de fiação para ar-condicionado, garantindo funcionamento adequado e seguro.</p>
                 </div>
+        <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                    <h3>Atendimento domiciliar</h3>
+                    <p>Atendimento seguro e em residência, com emissão de nota fiscal para garantir a integridade.</p>
+                </div>
+        <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-plug"></i>
+                    </div>
+                    <h3>Atendimento industrial</h3>
+                    <p>Atendemos em ambiente industrial de forma prática e segura, com emissão de nota para garantir integridade comercial.</p>
+                </div>
                 <div class="service-card">
                     <div class="service-icon">
                         <i class="fas fa-shield-alt"></i>
