--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+   <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -251,6 +251,10 @@
                     <div class="contact-info">
                         <i class="fab fa-whatsapp"></i>
                         <div>(11) 95978-5374</div>
+                    </div>
+                   <div class="contact-info">
+                        <i class="fas fa-envelope"></i>
+                        <div>xavier.soares1113@gmail.com</div>
                     </div>
                     <div class="contact-info">
                         <i class="fas fa-clock"></i>
