--- a/index.html
+++ b/index.html
@@ -230,8 +230,32 @@
             </a>
         </div>
     </section>
+<!-- Gallery Section -->
+<section class="gallery" id="gallery">
+    <div class="container">
+        <div class="section-title">
+            <h2>Trabalhos Realizados</h2>
+            <p>Confira alguns dos serviços que já realizamos com qualidade e profissionalismo.</p>
+        </div>
+        <div class="gallery-grid">
+            <div class="gallery-item">
+                <img src="imagem1.jpeg" alt="Instalação elétrica residencial">
+            </div>
+            <div class="gallery-item">
+                <img src="imagem2.jpeg" alt="Manutenção de quadro de energia">
+            </div>
+            <div class="gallery-item">
+                <img src="imagem3.jpeg" alt="Troca de fiação elétrica">
+            </div>
+            <div class="gallery-item">
+                <img src="imagem4.jpeg" alt="Instalação de luminárias de LED">
+            </div>
+        </div>
+    </div>
+</section>
 
-   <!-- Footer -->
+
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -276,6 +300,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Floating WhatsApp Button -->
     <a href="https://wa.me/5511959785374" class="floating-whatsapp" target="_blank" title="Enviar mensagem no WhatsApp">
